2008-12-23  Per Bothner  <per@bothner.com>

	* PreProcess.java:  Support "android" as a new "version".
	Add 'use:javax.xml.transform' as a new directive.

2008-10-24  Per Bothner  <per@bothner.com>

	* IdentityHashTable.java: New class, extends GeneralHashTable.
	* Makefile.am: Update accordingly.

	* GeneralHashTable.java (get(Object)): New method, for partial
	compatibility with Map.

2008-01-16  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java (remove): Fix thinko.
	Bug reported by daniel.s.terhorst@gmail.com; and jim@pagesmiths.com.

2007-01-06  Per Bothner  <per@bothner.com>

	* PreProcess.java (version_features): Map "java1" etc to
	list of pre-process options.
	(handleArg): New method.
	Handele '%java1" etc using version_features.

2007-01-02  Per Bothner  <per@bothner.com>

	* FixupHtmlToc.java: New class, used for managing Kawa web site.
	* Makefile.am: Update accordingly.

2006-10-25  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java (rehash): Preserve order of nodes in hash
	bucket - this is useful for NameLookup.
	(mask, rehash): Make protected.
	* HashNode.java (next): Make public.

2006-10-24  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java (log2Size): Remove unneeded field.

	* GeneralHashTable.java (put): We need to update the index and first
	variable after a rehash.

2006-09-08  Per Bothner  <per@bothner.com>

	* ConsumeProc.java: Remove unused class.
	* Makefile.ma: Update accordingly.

2005-12-31  Per Bothner  <per@bothner.com>

	* PreProcess.java: Fix various problems in handling nested
	conditionals.

2005-12-30  Per Bothner  <per@bothner.com>

	* PreProcess.java (filter): Implement nested conditionals.

2005-10-16  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java: Improve compatibility with java.util.Map.
	(clear, size): New methods.
	* HashNode.java: Implement java.util.Map.Entry, in the JAVA2 case.
	(setValue): Method returns old value.
	(equals, hashCode): New methods.
